base/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msb-backend
  labels:
    app: msb-backend
    tier: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: msb-backend
  template:
    metadata:
      labels:
        app: msb-backend
    spec:
      containers:
        - name: msb-backend
          image: adminer:4
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
