base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msb-backend
  labels:
    app: msb-backend
spec:
  selector:
    app: msb-backend
  ports:
    - port: 8080
      targetPort: 8080
